[GREEN] Implement EventService for add event