@@ -2,6 +2,7 @@ package backend.eventsphere.event.service;
 
 import backend.eventsphere.event.model.Event;
 import backend.eventsphere.event.repository.EventRepository;
+import backend.eventsphere.event.service.strategy.ValidationStrategy;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,7 +24,12 @@ public class EventServiceTest {
     @Mock
     private EventRepository eventRepository;
 
-    @InjectMocks
+    @Mock
+    private ValidationStrategy validationStrategy1;
+
+    @Mock
+    private ValidationStrategy validationStrategy2;
+
     private EventService eventService;
 
     private Event event1;
@@ -31,8 +37,28 @@ public class EventServiceTest {
 
     @BeforeEach
     public void setUp() {
-        event1 = new Event(UUID.randomUUID(), "Event 1", 20000L, LocalDateTime.of(2025, 6, 1, 15, 0), "Location 1", "Description 1", "http://example.com/image1.jpg");
-        event2 = new Event(UUID.randomUUID(), "Event 2", 30000L, LocalDateTime.of(2025, 7, 1, 17, 0), "Location 2", "Description 2", "http://example.com/image2.jpg");
+        eventService = new EventService(eventRepository, List.of(validationStrategy1, validationStrategy2));
+
+        UUID organizerId = UUID.randomUUID();
+        event1 = new Event(
+                organizerId,
+                "Event 1",
+                20000L,
+                LocalDateTime.of(2025, 6, 1, 15, 0),
+                "Location 1",
+                "Description 1",
+                "http://example.com/image1.jpg"
+        );
+
+        event2 = new Event(
+                organizerId,
+                "Event 2",
+                30000L,
+                LocalDateTime.of(2025, 7, 1, 17, 0),
+                "Location 2",
+                "Description 2",
+                "http://example.com/image2.jpg"
+        );
     }
 
     @Test
@@ -46,7 +72,7 @@ public class EventServiceTest {
 
     @Test
     public void testGetAllEventsWhenNoEvents() {
-        when(eventRepository.findAll()).thenReturn(Arrays.asList());
+        when(eventRepository.findAll()).thenReturn(List.of());
         List<Event> events = eventService.getAllEvents();
         assertThat(events).isEmpty();
         verify(eventRepository, times(1)).findAll();
@@ -54,10 +80,16 @@ public class EventServiceTest {
 
     @Test
     public void testAddEvent_setsPlannedStatusIfNull_andRunsValidation_andSaves() {
-        Event event = new Event(null, "Test Event", 10000L,
-                LocalDateTime.of(2025, 8, 1, 14, 0), "Jakarta", "Desc", "https://img.com");
-        event.setOrganizerId(UUID.randomUUID());
-        event.setStatus(null);
+        UUID organizerId = UUID.randomUUID();
+        Event event = new Event(
+                organizerId,
+                "Test Event",
+                10000L,
+                LocalDateTime.of(2025, 8, 1, 14, 0),
+                "Jakarta",
+                "Desc",
+                "https://img.com"
+        );
 
         when(eventRepository.save(event)).thenReturn(event);
 
@@ -71,16 +103,23 @@ public class EventServiceTest {
 
     @Test
     public void testAddEvent_preservesStatusIfSet_andRunsValidation_andSaves() {
-        Event event = new Event(null, "Event with Status", 50000L,
-                LocalDateTime.of(2025, 9, 1, 19, 0), "Bandung", "Desc", "https://img.com");
-        event.setOrganizerId(UUID.randomUUID());
-        event.setStatus("PUBLISHED");
+        UUID organizerId = UUID.randomUUID();
+        Event event = new Event(
+                organizerId,
+                "Published Event",
+                50000L,
+                LocalDateTime.of(2025, 9, 1, 19, 0),
+                "Bandung",
+                "Some description",
+                "https://img.com"
+        );
+        event.setStatus("CANCELLED");
 
         when(eventRepository.save(event)).thenReturn(event);
 
         Event saved = eventService.addEvent(event);
 
-        assertThat(saved.getStatus()).isEqualTo("PUBLISHED");
+        assertThat(saved.getStatus()).isEqualTo("CANCELLED");
         verify(validationStrategy1).validate(event);
         verify(validationStrategy2).validate(event);
         verify(eventRepository).save(event);
